--- a/naviroq/package.json
+++ b/naviroq/package.json
@@ -21,6 +21,7 @@
         "bcrypt": "^5.1.1",
         "bcryptjs": "^2.4.3",
         "dotenv": "^16.4.5",
+        "esm": "^3.2.25",
         "firebase": "^10.14.1",
         "firebase-admin": "^12.6.0",
         "framer-motion": "^11.11.7",
@@ -31,6 +32,7 @@
         "mongoose": "^8.7.1",
         "next": "14.2.14",
         "next-auth": "^5.0.0-beta.22",
+        "node-jose": "^2.2.0",
         "react": "^18",
         "react-dom": "^18",
         "react-hook-form": "^7.53.0",
@@ -41,7 +43,10 @@
         "socket.io": "^4.8.0",
         "socket.io-client": "^4.8.0",
         "sonner": "^1.5.0",
-        "zod": "^3.23.8"
+        "tweetnacl": "^1.0.3",
+        "tweetnacl-util": "^0.15.1",
+        "zod": "^3.23.8",
+        "zustand": "^5.0.1"
     },
     "devDependencies": {
         "@babel/plugin-transform-private-property-in-object": "^7.25.7",
