--- a/naviroq/package.json
+++ b/naviroq/package.json
@@ -14,16 +14,20 @@
         "@hookform/resolvers": "^3.9.0",
         "@mui/icons-material": "^6.1.3",
         "@mui/material": "^6.1.3",
+        "@mui/x-date-pickers": "^7.22.2",
         "@react-google-maps/api": "^2.20.3",
         "@tanstack/react-query": "^5.59.0",
         "@tanstack/react-query-devtools": "^5.59.0",
         "axios": "^1.7.7",
         "bcrypt": "^5.1.1",
         "bcryptjs": "^2.4.3",
+        "cloudinary": "^2.5.1",
+        "dayjs": "^1.11.13",
         "dotenv": "^16.4.5",
         "esm": "^3.2.25",
         "firebase": "^10.14.1",
         "firebase-admin": "^12.6.0",
+        "formidable": "^3.5.2",
         "framer-motion": "^11.11.7",
         "jose": "^5.9.4",
         "jsonwebtoken": "^9.0.2",
@@ -34,10 +38,12 @@
         "next-auth": "^5.0.0-beta.22",
         "node-jose": "^2.2.0",
         "react": "^18",
+        "react-advanced-cropper": "^0.20.0",
         "react-dom": "^18",
         "react-hook-form": "^7.53.0",
         "react-intersection-observer": "^9.13.1",
         "react-leaflet": "^4.2.1",
+        "react-phone-number-input": "^3.4.9",
         "react-spinners": "^0.14.1",
         "react-toastify": "^10.0.5",
         "socket.io": "^4.8.0",
